--- a/index.html
+++ b/index.html
@@ -4,164 +4,135 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Dark D&D: An 8-Bit 3D Crawl</title>
-  <meta name="description" content="Enter the abyss in this dark, 8-bit 3D dungeon crawler. Loot relics, master forbidden spells, and survive the void.">
+  <title>Grave-Born: Arena of the Void</title>
+  <meta name="description" content="An 8-bit Grimdark 2D turn-based arena RPG. Pixel-art combat in the abyss.">
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Almendra+SC&family=MedievalSharp&display=swap" rel="stylesheet">
   <style>
     :root {
-      --blood-red: #4a0404;
-      --deep-amethyst: #3d0158;
-      --withered-gold: #8a7500;
+      --blood-red: #7a0000;
+      --deep-purple: #1a052a;
+      --charcoal: #050508;
       --soul-green: #00ff66;
+      --void-black: #000000;
     }
     body {
       margin: 0;
       padding: 0;
-      background-color: #050508;
+      background-color: var(--void-black);
       overflow: hidden;
       font-family: 'MedievalSharp', cursive;
-      color: #d4af37;
+      color: var(--soul-green);
       touch-action: none;
-      -webkit-user-select: none;
       user-select: none;
     }
-    h1, h2, h3, h4 {
-      font-family: 'Almendra SC', serif;
+
+    /* CRT & Grimdark Shader Effects */
+    .crt-container {
+      position: relative;
+      overflow: hidden;
+      width: 100vw;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: var(--void-black);
     }
+
     .crt-overlay {
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      pointer-events: none;
-      z-index: 40;
-      /* Scanline effect */
-      background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.03), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.03));
+      background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%), 
+                  linear-gradient(90deg, rgba(255, 0, 0, 0.05), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.05));
+      z-index: 50;
       background-size: 100% 3px, 3px 100%;
-    }
-    .noise::before {
-      content: "";
-      position: absolute;
-      top: -50%;
-      left: -50%;
-      width: 200%;
-      height: 200%;
-      background-image: url("https://upload.wikimedia.org/wikipedia/commons/7/76/1k_filmgrain.png");
-      opacity: 0.12;
-      z-index: 15;
       pointer-events: none;
-      animation: noise 0.2s infinite;
+      opacity: 0.6;
     }
-    @keyframes noise {
-      0% { transform: translate(0, 0); }
-      10% { transform: translate(-5%, -5%); }
-      100% { transform: translate(5%, 0); }
+
+    .chromatic-aberration {
+      animation: chromatic 4s infinite linear;
     }
-    .vignette {
+
+    @keyframes chromatic {
+      0% { filter: contrast(1.2) brightness(1.1) drop-shadow(1px 0px 0px rgba(255,0,0,0.2)) drop-shadow(-1px 0px 0px rgba(0,0,255,0.2)); }
+      50% { filter: contrast(1.3) brightness(1.2) drop-shadow(2px 0px 1px rgba(255,0,0,0.3)) drop-shadow(-2px 0px 1px rgba(0,0,255,0.3)); }
+      100% { filter: contrast(1.2) brightness(1.1) drop-shadow(1px 0px 0px rgba(255,0,0,0.2)) drop-shadow(-1px 0px 0px rgba(0,0,255,0.2)); }
+    }
+
+    canvas {
+      image-rendering: pixelated;
+      box-shadow: 0 0 100px rgba(26, 5, 42, 0.8);
+      border: 4px solid var(--deep-purple);
+    }
+
+    .stone-ui {
+      background: var(--charcoal);
+      border: 4px solid var(--deep-purple);
+      position: relative;
+      box-shadow: 4px 4px 0px #000;
+    }
+
+    .stone-ui::after {
+      content: '';
       position: absolute;
+      inset: -8px;
+      border: 2px solid rgba(0, 255, 102, 0.1);
+      pointer-events: none;
+    }
+
+    .narrator-bar {
+      position: fixed;
       top: 0;
       left: 0;
       width: 100%;
-      height: 100%;
-      box-shadow: inset 0 0 200px rgba(0, 0, 0, 1), inset 0 0 100px rgba(0, 0, 0, 0.9);
-      pointer-events: none;
-      z-index: 35;
-    }
-    .stone-slab {
-      background: linear-gradient(135deg, #1a1a1a 0%, #0a0a0a 100%);
-      border: 3px solid var(--deep-amethyst);
-      box-shadow: 4px 4px 0px #000;
-      position: relative;
-    }
-    .stone-slab:hover {
-      border-color: var(--soul-green);
-      box-shadow: 0 0 15px var(--soul-green);
-    }
-    .parchment {
-      background: #111;
-      border: 2px solid var(--withered-gold);
-      padding: 1rem;
-      position: relative;
-    }
-    .custom-scrollbar::-webkit-scrollbar {
-      width: 4px;
-    }
-    .custom-scrollbar::-webkit-scrollbar-track {
-      background: #0c0a0f;
-    }
-    .custom-scrollbar::-webkit-scrollbar-thumb {
-      background: var(--deep-amethyst);
-    }
-    .pulse-heart {
-      animation: heartbeat 1.5s ease-in-out infinite;
-    }
-    @keyframes heartbeat {
-      0% { transform: scale(1); opacity: 0.8; }
-      10% { transform: scale(1.05); opacity: 1; }
-      20% { transform: scale(1); opacity: 0.8; }
-      30% { transform: scale(1.1); opacity: 1; }
-      70% { transform: scale(1); opacity: 0.8; }
-    }
-    .floating-dm-text {
-      position: absolute;
-      pointer-events: none;
-      color: #fff;
-      font-weight: bold;
-      text-shadow: 2px 2px 0px #000, -2px -2px 0px #000, 2px -2px 0px #000, -2px 2px 0px #000;
+      padding: 1.5rem;
+      background: rgba(0,0,0,0.9);
+      border-bottom: 2px solid var(--deep-purple);
       text-align: center;
       z-index: 100;
-      font-size: 14px;
-      animation: float-up 3s ease-out forwards;
+      color: var(--soul-green);
+      font-size: 1.4rem;
+      text-shadow: 0 0 10px var(--soul-green);
+      pointer-events: none;
+      text-transform: uppercase;
+      letter-spacing: 4px;
     }
-    @keyframes float-up {
-      0% { transform: translate(-50%, 0); opacity: 0; }
-      10% { transform: translate(-50%, -20px); opacity: 1; }
-      90% { transform: translate(-50%, -80px); opacity: 1; }
-      100% { transform: translate(-50%, -90px); opacity: 0; }
-    }
-    #joystick-container {
-      position: fixed;
-      bottom: 40px;
-      left: 40px;
-      width: 120px;
-      height: 120px;
-      background: rgba(26, 26, 26, 0.7);
-      border: 4px solid var(--deep-amethyst);
-      border-radius: 50%;
-      z-index: 200;
-      touch-action: none;
-    }
-    #joystick-knob {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      width: 50px;
-      height: 50px;
-      margin: -25px 0 0 -25px;
-      background: var(--deep-amethyst);
-      border: 3px solid var(--soul-green);
-      border-radius: 50%;
-      box-shadow: 0 0 10px var(--soul-green);
-    }
-    #action-button {
-      position: fixed;
-      bottom: 40px;
-      right: 40px;
-      width: 100px;
-      height: 100px;
-      z-index: 200;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+
+    .pixel-button {
+      background: var(--deep-purple);
+      border: 4px solid #000;
+      color: var(--soul-green);
+      padding: 12px 24px;
       font-weight: bold;
-      font-size: 20px;
-      border-radius: 50%;
+      text-transform: uppercase;
+      cursor: pointer;
+      transition: all 0.1s;
+      box-shadow: 4px 4px 0px #000;
     }
-    .death-grayscale {
-      filter: grayscale(1) brightness(0.5) contrast(1.4) !important;
-      transition: filter 3s ease-in-out;
+
+    .pixel-button:hover {
+      background: #330b52;
+      transform: translate(-2px, -2px);
+      box-shadow: 6px 6px 0px #000;
+    }
+
+    .pixel-button:active {
+      transform: translate(2px, 2px);
+      box-shadow: 0px 0px 0px #000;
+    }
+
+    @keyframes soul-pulse {
+      0% { box-shadow: 0 0 10px var(--soul-green); }
+      50% { box-shadow: 0 0 30px var(--soul-green); }
+      100% { box-shadow: 0 0 10px var(--soul-green); }
+    }
+
+    .pulse {
+      animation: soul-pulse 2s infinite ease-in-out;
     }
   </style>
 <script type="importmap">
@@ -176,7 +147,10 @@
 }
 </script>
 </head>
-<body class="noise">
-  <div id="root"></div>
+<body>
+  <div class="crt-container">
+    <div id="root" class="chromatic-aberration"></div>
+    <div class="crt-overlay"></div>
+  </div>
 </body>
 </html>
